; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_start.c_free_monitor.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_start.c_free_monitor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.monitor = type { i32, %struct.monitor*, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.monitor*)* @free_monitor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_monitor(%struct.monitor* %0) #0 {
  %2 = alloca %struct.monitor*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.monitor* %0, %struct.monitor** %2, align 8
  %5 = load %struct.monitor*, %struct.monitor** %2, align 8
  %6 = getelementptr inbounds %struct.monitor, %struct.monitor* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 8
  store i32 %7, i32* %4, align 4
  store i32 0, i32* %3, align 4
  br label %8

8:                                                ; preds = %20, %1
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* %4, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %23

12:                                               ; preds = %8
  %13 = load %struct.monitor*, %struct.monitor** %2, align 8
  %14 = getelementptr inbounds %struct.monitor, %struct.monitor* %13, i32 0, i32 1
  %15 = load %struct.monitor*, %struct.monitor** %14, align 8
  %16 = load i32, i32* %3, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds %struct.monitor, %struct.monitor* %15, i64 %17
  %19 = call i32 @skynet_monitor_delete(%struct.monitor* byval(%struct.monitor) align 8 %18)
  br label %20

20:                                               ; preds = %12
  %21 = load i32, i32* %3, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %3, align 4
  br label %8

23:                                               ; preds = %8
  %24 = load %struct.monitor*, %struct.monitor** %2, align 8
  %25 = getelementptr inbounds %struct.monitor, %struct.monitor* %24, i32 0, i32 3
  %26 = call i32 @pthread_mutex_destroy(i32* %25)
  %27 = load %struct.monitor*, %struct.monitor** %2, align 8
  %28 = getelementptr inbounds %struct.monitor, %struct.monitor* %27, i32 0, i32 2
  %29 = call i32 @pthread_cond_destroy(i32* %28)
  %30 = load %struct.monitor*, %struct.monitor** %2, align 8
  %31 = getelementptr inbounds %struct.monitor, %struct.monitor* %30, i32 0, i32 1
  %32 = load %struct.monitor*, %struct.monitor** %31, align 8
  %33 = call i32 @skynet_free(%struct.monitor* %32)
  %34 = load %struct.monitor*, %struct.monitor** %2, align 8
  %35 = call i32 @skynet_free(%struct.monitor* %34)
  ret void
}

declare dso_local i32 @skynet_monitor_delete(%struct.monitor* byval(%struct.monitor) align 8) #1

declare dso_local i32 @pthread_mutex_destroy(i32*) #1

declare dso_local i32 @pthread_cond_destroy(i32*) #1

declare dso_local i32 @skynet_free(%struct.monitor*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
